--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <title>Jeorgette Cuellar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+ <script src="https://cdn.tailwindcss.com"></script>
+ </head>
   <body class="bg-gray-50">
     <div id="root"></div>
     <script type="module" src="/main.jsx"></script>
