--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <title>Jeorgette Cuellar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <script src="https://cdn.tailwindcss.com"></script>
- </head>
-  <body class="bg-gray-50">
+
+    <!-- Google Font: Montserrat -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- TailwindCSS CDN (used for development) -->
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+
+  <body class="bg-gray-50 font-[Montserrat]">
     <div id="root"></div>
     <script type="module" src="/main.jsx"></script>
   </body>
 </html>
-
